# hire-me-be

./: config.py  main.py  pyproject.toml
auth/: routes.py  utils.py
controllers/: assessment_controller.py  interview_assess_controller.py  job_controller.py  resume_controller.py  schedule_controller.py  speech_controller.py  video_controller.py
routes/: assessment_routes.py  interview_assess_routes.py  job_routes.py  resume_routes.py  schedule_routes.py  speech_routes.py  video_routes.py
services/: candidate_assessment.py  parsers.py
utils/: pymango_wrappers.py
