[project]
name = "hire-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.0",
    "google-genai>=1.43.0",
    "pdfplumber>=0.11.7",
    "pydantic>=2.12.0",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]
